@@ -1,12 +1,12 @@
 /*
  * Copyright 2017 Adaptris Ltd.
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *     http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -57,11 +57,11 @@ public class CoreExceptionTest {
   public void testConstructor() throws Exception {
     for (String s : EXCEPTION_NAMES) {
       try {
-        Exception e = (Exception) Class.forName(s).newInstance();
+        Exception e = (Exception) Class.forName(s).getDeclaredConstructor().newInstance();
         assertNull(e.getCause());
         assertNull(e.getMessage());
       }
-      catch (InstantiationException sometimes) {
+      catch (InstantiationException | NoSuchMethodException sometimes) {
 
       }
     }
