@@ -6,6 +6,7 @@ import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 import java.util.ArrayList;
 import java.util.List;
 import org.junit.Before;
@@ -22,6 +23,7 @@ import com.adaptris.core.MultiPayloadAdaptrisMessageImp;
 import com.adaptris.core.MultiPayloadMessageFactory;
 import com.adaptris.core.Service;
 import com.adaptris.core.ServiceException;
+import com.adaptris.core.StartedState;
 import com.adaptris.core.services.LogMessageService;
 import com.adaptris.util.GuidGenerator;
 
@@ -39,7 +41,13 @@ public class ForEachTest extends ConditionalServiceExample
 	@Before
 	public void setUp() throws Exception
 	{
-		MockitoAnnotations.initMocks(this);
+		MockitoAnnotations.openMocks(this);
+
+		when(mock.retrieveComponentState())
+            .thenReturn(StartedState.getInstance());
+		when(mock.createName())
+		    .thenReturn(mock.getClass().getName());
+
 		forEach = new ForEach();
 		then = new ThenService();
 		then.setService(mock);
@@ -52,7 +60,7 @@ public class ForEachTest extends ConditionalServiceExample
 	public void testForEach() throws Exception
 	{
 		forEach.doService(message);
-		assertEquals(new Integer(1), forEach.getThreadCount());
+    assertEquals(Integer.valueOf(1), forEach.getThreadCount());
 		verify(mock, times(2)).doService(any(AdaptrisMessage.class));
 	}
 
@@ -68,7 +76,7 @@ public class ForEachTest extends ConditionalServiceExample
 	public void testParallelForEach() throws Exception
 	{
 		forEach.setThreadCount(0);
-		assertEquals(new Integer(0), forEach.getThreadCount());
+    assertEquals(Integer.valueOf(0), forEach.getThreadCount());
 		forEach.doService(message);
 		verify(mock, times(2)).doService(any(AdaptrisMessage.class));
 	}
@@ -77,7 +85,7 @@ public class ForEachTest extends ConditionalServiceExample
 	public void testBadThreadCount()
 	{
 		forEach.setThreadCount(-1);
-		assertEquals(new Integer(0), forEach.getThreadCount());
+    assertEquals(Integer.valueOf(0), forEach.getThreadCount());
 	}
 
 	@Test
